# tree-sitter-printf

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  publish.yml  release.yml
bindings/go/: binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_printf/: binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterPrintfTests/: TreeSitterPrintfTests.swift
src/: grammar.json  node-types.json  parser.c
