[package]
name = "tree-sitter-printf"
description = "printf grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "printf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ObserverOfTime/tree-sitter-printf"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
