[package]
name = "tree-sitter-printf"
description = "Injectable printf format grammar for tree-sitter"
version = "0.3.0"
keywords = ["incremental", "parsing", "printf"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-printf"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
