[package]
name = "tree-sitter-printf"
description = "printf format grammar for tree-sitter"
version = "0.5.1"
authors = [
  "Peter Stuifzand",
  "ObserverOfTime <chronobserver@disroot.org>"
]
license = "ISC"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "printf"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-printf"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
